--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
     "dev": "sh bin/watch.sh"
   },
   "author": "",
@@ -13,6 +14,7 @@
     "@types/node": "^16.7.6",
     "discord-api-types": "^0.22.0",
     "discord.js": "^13.1.0",
+    "dotenv": "^10.0.0",
     "fastify": "^3.20.2",
     "fastify-static": "^4.2.3",
     "fuse.js": "^6.4.6",
@@ -20,6 +22,7 @@
     "typescript": "^4.4.2"
   },
   "devDependencies": {
+    "@types/node-fetch": "^2.5.12",
     "nodemon": "^2.0.12",
     "prettier": "^2.3.2"
   },
