--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,7 +5,7 @@
     "baseUrl": ".",
     "esModuleInterop": true,
     "incremental": true,
-    "lib": ["ES2020", "DOM"],
+    "lib": ["ES2020"],
     "module": "commonjs",
     "moduleResolution": "node",
     "noImplicitAny": true,
