--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,12 @@
   "scripts": {
     "build:css": "gulp sassBuild",
     "build:js": "elm-spa build",
+    "watch": "concurrently \"npm run watch:elm\" \"npm run watch:styles\" ",
+    "watch:elm": "elm-spa server",
     "watch:styles": "gulp watchStyles"
   },
   "devDependencies": {
+    "concurrently": "^6.2.1",
     "elm": "^0.19.1-5",
     "elm-spa": "^6.0.4",
     "gulp": "^4.0.2",
