--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npm run build-server && npm run build-client && npm run build-assemble",
-    "build-client": "cd client && npm install && npm run build && cd ..",
-    "build-server": "cd server && npm install && npm run build && cd ..",
+    "build": "yarn build-server && yarn build-client && yarn build-assemble",
+    "build-client": "cd client && yarn install && yarn build && cd ..",
+    "build-server": "cd server && yarn install && yarn build && cd ..",
     "build-assemble": "mv client/public/* server/public/",
     "start": "node server/dist/index.js"
   },
@@ -17,6 +17,7 @@
   },
   "homepage": "https://rivalsdb.app",
   "engines": {
-    "node": "16.8.0"
+    "node": "16.8.0",
+    "yarn": "1.x"
   }
 }
