--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "@discordjs/builders": "^0.6.0",
-    "@discordjs/rest": "^0.1.0-canary.0",
+    "@discordjs/rest": "^0.1.1-canary.0",
     "@types/node": "^16.7.6",
     "@types/node-fetch": "^2.5.12",
     "discord-api-types": "^0.22.0",
@@ -29,5 +29,9 @@
   },
   "volta": {
     "node": "16.8.0"
+  },
+  "engines": {
+    "node": "16.8.0",
+    "yarn": "1.x"
   }
 }
