--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,9 @@
   "scripts": {
     "build": "yarn build-js && yarn build-css",
     "build-css": "gulp sassBuild",
-    "build-js": "elm-spa build",
+    "build-js": "./node_modules/.bin/elm-spa build",
     "watch": "concurrently \"npm:watch-*\"",
-    "watch-elm": "elm-spa server",
+    "watch-elm": "./node_modules/.bin/elm-spa server",
     "watch-styles": "gulp watchStyles"
   },
   "devDependencies": {
