--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,12 @@
   "scripts": {
     "build": "yarn build-js && yarn build-css",
     "build-css": "gulp sassBuild",
-    "build-js": "./node_modules/.bin/elm-spa build",
+    "build-js": "elm-spa build",
     "watch": "concurrently \"npm:watch-*\"",
-    "watch-elm": "./node_modules/.bin/elm-spa server",
+    "watch-elm": "elm-spa server",
     "watch-styles": "gulp watchStyles"
   },
-  "devDependencies": {
+  "dependencies": {
     "concurrently": "^6.2.1",
     "elm": "^0.19.1-5",
     "elm-spa": "^6.0.4",
