--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "yarn build-server && yarn build-client && yarn build-assemble",
     "build-client": "cd client && yarn install && yarn build && cd ..",
     "build-server": "cd server && yarn install && yarn build && cd ..",
-    "build-assemble": "mv client/public/* server/public/",
+    "build-assemble": "mkdir -p server/public && mv client/public/* server/public/",
     "start": "node server/dist/index.js"
   },
   "author": "Luiz Socrate <luiz@socrate.com.br>",
