Only deploy on tags

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,9 @@
 on:
+  workflow_dispatch:
   push:
-    branches:
-      - master
+    tags:
+      - '*'
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
