--- a/server/package.json
+++ b/server/package.json
@@ -15,15 +15,14 @@
     "@types/node-fetch": "^2.5.12",
     "discord-api-types": "^0.22.0",
     "discord.js": "^13.1.0",
-    "dotenv": "^10.0.0",
     "fastify": "^3.20.2",
     "fastify-static": "^4.2.3",
     "fuse.js": "^6.4.6",
     "node-fetch": "^2.6.1",
-    "source-map-support": "^0.5.19",
     "typescript": "^4.4.2"
   },
   "devDependencies": {
+    "dotenv": "^10.0.0",
     "nodemon": "^2.0.12",
     "prettier": "^2.3.2"
   },
@@ -33,5 +32,6 @@
   "engines": {
     "node": "16.8.0",
     "yarn": "1.x"
-  }
+  },
+  "type": "module"
 }
