--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,8 @@
   "author": "Luiz Socrate <luiz@socrate.com.br>",
   "license": "MIT",
   "dependencies": {
+    "@databases/pg": "^5.1.1",
+    "@databases/pg-migrations": "^5.0.0",
     "@discordjs/builders": "^0.6.0",
     "@discordjs/rest": "^0.1.1-canary.0",
     "@types/node": "^16.7.6",
