--- a/server/package.json
+++ b/server/package.json
@@ -13,11 +13,13 @@
     "@databases/pg-migrations": "^5.0.0",
     "@discordjs/builders": "^0.6.0",
     "@discordjs/rest": "^0.1.1-canary.0",
+    "@magic-sdk/admin": "^1.3.0",
     "@types/node": "^16.7.6",
     "@types/node-fetch": "^2.5.12",
     "discord-api-types": "^0.22.0",
     "discord.js": "^13.1.0",
     "fastify": "^3.20.2",
+    "fastify-plugin": "^3.0.0",
     "fastify-static": "^4.2.3",
     "fuse.js": "^6.4.6",
     "node-fetch": "^2.6.1",
