--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "discord-api-types": "^0.22.0",
     "discord.js": "^13.1.0",
     "fastify": "^3.20.2",
+    "fastify-cors": "^6.0.2",
     "fastify-plugin": "^3.0.0",
     "fastify-static": "^4.2.3",
     "fuse.js": "^6.4.6",
