--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["src/**/*.ts"],
+  "include": ["src/index.ts", "src/typings/**/*.ts"],
   "compilerOptions": {
     "baseUrl": ".",
     "esModuleInterop": true,
