--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "typescript": "^4.5.4"
   },
   "devDependencies": {
+    "ava": "^4.0.1",
     "dotenv": "^10.0.0",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1"
