--- a/server/package.json
+++ b/server/package.json
@@ -15,8 +15,8 @@
     "@databases/pg-migrations": "^5.0.0",
     "@discordjs/builders": "^0.9.0",
     "@discordjs/rest": "^0.1.1-canary.0",
-    "@magic-sdk/admin": "^1.3.2",
-    "@types/node": "^16.11.0",
+    "@magic-sdk/admin": "^1.3.4",
+    "@types/node": "16.11.21",
     "@types/node-fetch": "^2.5.12",
     "discord-api-types": "^0.23.1",
     "discord.js": "^13.2.0",
@@ -28,12 +28,12 @@
     "fuse.js": "^6.4.6",
     "nanoid": "^3.1.30",
     "node-fetch": "^2.6.1",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.5"
   },
   "devDependencies": {
     "ava": "^4.0.1",
     "concurrently": "^7.0.0",
-    "dotenv": "^10.0.0",
+    "dotenv": "^14.2.0",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
     "ts-node": "^10.4.0"
