--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "discord-api-types": "^0.23.1",
     "discord.js": "^13.2.0",
     "fastify": "^3.22.0",
+    "fastify-auth0-verify": "^0.7.0",
     "fastify-compress": "^4.0.1",
     "fastify-cors": "^6.0.2",
     "fastify-plugin": "^3.0.0",
