--- a/server/package.json
+++ b/server/package.json
@@ -11,24 +11,21 @@
   "author": "Luiz Socrate <luiz@socrate.com.br>",
   "license": "MIT",
   "dependencies": {
-    "@databases/pg": "^5.1.1",
+    "@databases/pg": "^5.4.1",
     "@databases/pg-migrations": "^5.0.0",
-    "@discordjs/builders": "^0.9.0",
-    "@discordjs/rest": "^0.1.1-canary.0",
-    "@magic-sdk/admin": "^1.3.4",
+    "@discordjs/builders": "^0.12.0",
+    "@discordjs/rest": "^0.3.0",
     "@types/node": "16.11.21",
-    "@types/node-fetch": "^2.5.12",
-    "discord-api-types": "^0.23.1",
-    "discord.js": "^13.2.0",
-    "fastify": "^3.22.0",
+    "discord-api-types": "^0.27.0",
+    "discord.js": "^13.6.0",
+    "fastify": "^3.27.1",
     "fastify-auth0-verify": "^0.7.0",
     "fastify-compress": "^4.0.1",
     "fastify-cors": "^6.0.2",
-    "fastify-plugin": "^3.0.0",
+    "fastify-plugin": "^3.0.1",
     "fastify-static": "^4.4.2",
-    "fuse.js": "^6.4.6",
-    "nanoid": "^3.1.30",
-    "node-fetch": "^2.6.1",
+    "fuse.js": "^6.5.3",
+    "nanoid": "^3.2.0",
     "typescript": "^4.5.5"
   },
   "devDependencies": {
@@ -40,10 +37,10 @@
     "ts-node": "^10.5.0"
   },
   "volta": {
-    "node": "16.8.0"
+    "node": "16.14.0"
   },
   "engines": {
-    "node": "16.8.0",
+    "node": "16.14.0",
     "yarn": "1.x"
   },
   "ava": {
