--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "homepage": "https://rivalsdb.app",
   "engines": {
-    "node": "16.8.0",
-    "yarn": "1.22.17"
+    "node": "16.14.0",
+    "yarn": "1.x"
   }
 }
