--- a/client/package.json
+++ b/client/package.json
@@ -24,9 +24,9 @@
     "@parcel/transformer-elm": "^2.0.1",
     "@parcel/transformer-inline-string": "^2.0.0",
     "@parcel/transformer-sass": "^2.0.1",
+    "@rivalsdb/id": "../shared/id",
     "elm": "^0.19.1-5",
     "elm-spa": "^6.0.4",
-    "nanoid": "^3.3.1",
     "parcel": "^2.0.1",
     "plausible-tracker": "^0.3.5"
   },
