--- a/shared/id/package.json
+++ b/shared/id/package.json
@@ -5,9 +5,10 @@
   "type": "module",
   "license": "MIT",
   "dependencies": {
-    "nanoid": "^3.3.1"
-  },
-  "devDependencies": {
+    "nanoid": "^3.3.1",
     "typescript": "^4.5.5"
+  },
+  "scripts": {
+    "postinstall": "tsc"
   }
 }
