--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "@databases/pg-migrations": "^5.0.0",
     "@discordjs/builders": "^0.12.0",
     "@discordjs/rest": "^0.3.0",
+    "@js-joda/core": "^5.2.0",
     "@rivalsdb/id": "../shared/id/",
     "@sentry/node": "^6.17.9",
     "@sentry/tracing": "^6.17.9",
