--- a/server/package.json
+++ b/server/package.json
@@ -16,35 +16,35 @@
     "@databases/pg-migrations": "^5.0.0",
     "@discordjs/builders": "^0.12.0",
     "@discordjs/rest": "^0.3.0",
+    "@fastify/compress": "^6.0.0",
+    "@fastify/cors": "^8.0.0",
+    "@fastify/static": "^6.4.0",
     "@js-joda/core": "^5.2.0",
     "@rivalsdb/id": "../shared/id/",
-    "@sentry/node": "^6.17.9",
-    "@sentry/tracing": "^6.17.9",
-    "@types/node": "16.11.21",
+    "@sentry/node": "^7.1.1",
+    "@sentry/tracing": "^7.1.1",
+    "@types/node": "^17.0.42",
     "discord-api-types": "^0.27.0",
     "discord.js": "^13.6.0",
-    "fastify": "^3.27.1",
+    "fastify": "^4.0.1",
     "fastify-auth0-verify": "^0.7.0",
-    "fastify-compress": "^4.0.1",
-    "fastify-cors": "^6.0.2",
     "fastify-plugin": "^3.0.1",
-    "fastify-static": "^4.4.2",
     "fuse.js": "^6.5.3",
-    "typescript": "^4.5.5"
+    "typescript": "^4.7.3"
   },
   "devDependencies": {
     "ava": "^4.0.1",
     "concurrently": "^7.0.0",
     "dotenv": "^16.0.0",
     "nodemon": "^2.0.15",
-    "prettier": "^2.5.1",
-    "ts-node": "^10.5.0"
+    "prettier": "^2.6.2",
+    "ts-node": "^10.8.1"
   },
   "volta": {
-    "node": "16.14.0"
+    "node": "18.3.0"
   },
   "engines": {
-    "node": "16.14.0",
+    "node": "18.3.0",
     "yarn": "1.x"
   },
   "ava": {
