--- a/client/.parcelrc
+++ b/client/.parcelrc
@@ -1,5 +1,7 @@
 {
-  "extends": ["@parcel/config-default"],
+  "extends": [
+    "@parcel/config-default"
+  ],
   "compressors": {
     "*.{html,css,js,svg,map}": [
       "...",
