--- a/client/package.json
+++ b/client/package.json
@@ -17,23 +17,23 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@auth0/auth0-spa-js": "^1.22.0",
-    "@parcel/compressor-brotli": "^2.6.0",
-    "@parcel/compressor-gzip": "^2.6.0",
-    "@parcel/optimizer-data-url": "^2.6.0",
-    "@parcel/transformer-elm": "^2.6.0",
-    "@parcel/transformer-inline-string": "^2.6.0",
-    "@parcel/transformer-sass": "^2.6.0",
+    "@auth0/auth0-spa-js": "^1.22.1",
     "@rivalsdb/id": "../shared/id",
-    "elm": "^0.19.1-5",
-    "elm-spa": "^6.0.4",
-    "parcel": "^2.6.0",
     "plausible-tracker": "^0.3.8"
   },
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "devDependencies": {
+    "@parcel/compressor-brotli": "^2.6.2",
+    "@parcel/compressor-gzip": "^2.6.2",
+    "@parcel/optimizer-data-url": "2.6.2",
+    "@parcel/transformer-elm": "2.6.2",
+    "@parcel/transformer-inline-string": "2.6.2",
+    "@parcel/transformer-sass": "2.6.2",
     "buffer": "^6.0.3",
     "concurrently": "^7.2.1",
+    "elm": "^0.19.1-5",
+    "elm-spa": "^6.0.4",
+    "parcel": "^2.6.2",
     "prettier": "^2.6.2"
   }
 }
