--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build-migrations": "cd server && yarn install && yarn db-apply-migrations && cd ..",
     "build-server": "cd server && yarn install && yarn build && cd ..",
     "build": "yarn build-server && yarn build-client && yarn build-migrations",
-    "heroku-postbuild": "ng build --prod",
+    "heroku-postbuild": "yarn build && yarn prune",
     "prune-client": "cd client && yarn install --production && cd ..",
     "prune-server": "cd server && yarn install --production && cd ..",
     "prune": "yarn prune-server && yarn prune-client",
