--- a/server/package.json
+++ b/server/package.json
@@ -14,8 +14,8 @@
   "dependencies": {
     "@databases/pg": "^5.4.1",
     "@databases/pg-migrations": "^5.0.0",
-    "@discordjs/builders": "^0.12.0",
-    "@discordjs/rest": "^0.3.0",
+    "@discordjs/builders": "^0.15.0",
+    "@discordjs/rest": "^0.5.0",
     "@fastify/compress": "^6.0.0",
     "@fastify/cors": "^8.0.0",
     "@fastify/static": "^6.4.0",
@@ -23,28 +23,28 @@
     "@rivalsdb/id": "../shared/id/",
     "@sentry/node": "^7.1.1",
     "@sentry/tracing": "^7.1.1",
-    "@types/node": "^18.0.0",
-    "discord-api-types": "^0.27.0",
+    "discord-api-types": "^0.36.1",
     "discord.js": "^13.6.0",
     "fastify": "^4.0.1",
     "fastify-auth0-verify": "^0.8.0",
     "fastify-plugin": "^3.0.1",
-    "fuse.js": "^6.5.3",
-    "typescript": "^4.7.3"
+    "fuse.js": "^6.5.3"
   },
   "devDependencies": {
+    "@types/node": "^18.0.0",
     "ava": "^4.0.1",
     "concurrently": "^7.0.0",
     "dotenv": "^16.0.0",
     "nodemon": "^2.0.15",
     "prettier": "^2.6.2",
-    "ts-node": "^10.8.1"
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.3"
   },
   "volta": {
-    "node": "18.3.0"
+    "node": "18.4.0"
   },
   "engines": {
-    "node": "18.3.0",
+    "node": "18.4.0",
     "yarn": "1.x"
   },
   "ava": {
