--- a/client/.proxyrc
+++ b/client/.proxyrc
@@ -3,6 +3,7 @@
     "target": "http://localhost:3000/",
     "pathRewrite": {
       "^/api": "/api"
-    }
+    },
+    "changeOrigin": true
   }
 }
