--- a/server/package.json
+++ b/server/package.json
@@ -41,10 +41,10 @@
     "typescript": "^4.7.3"
   },
   "volta": {
-    "node": "18.4.0"
+    "node": "18.7.0"
   },
   "engines": {
-    "node": "18.4.0",
+    "node": "18.x",
     "yarn": "1.x"
   },
   "ava": {
