--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,4 @@
-RAILWAY_STATIC_URL="www.rivalsdb.app"
+RAILWAY_STATIC_URL="https://www.rivalsdb.app"
 RUN_BOT_SERVER=0
 PORT=3000
 ENVIRONMENT="local"
