--- a/package.json
+++ b/package.json
@@ -31,5 +31,9 @@
   "cacheDirectories": [
     "client/node_modules",
     "server/node_modules"
-  ]
+  ],
+  "dependencies": {
+    "fastify": "^4.11.0",
+    "path": "^0.12.7"
+  }
 }
