--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -10,6 +10,7 @@
     "outDir": "dist",
     "resolveJsonModule": true,
     "sourceMap": true,
+    "skipLibCheck": true,
     "strict": true,
     "target": "ES2022"
   }
