--- a/client/package.json
+++ b/client/package.json
@@ -23,17 +23,17 @@
   },
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "devDependencies": {
-    "@parcel/compressor-brotli": "^2.7.0",
-    "@parcel/compressor-gzip": "^2.7.0",
-    "@parcel/optimizer-data-url": "^2.7.0",
-    "@parcel/transformer-elm": "^2.7.0",
-    "@parcel/transformer-inline-string": "^2.7.0",
-    "@parcel/transformer-sass": "^2.7.0",
+    "@parcel/compressor-brotli": "2.7.0",
+    "@parcel/compressor-gzip": "2.7.0",
+    "@parcel/optimizer-data-url": "2.7.0",
+    "@parcel/transformer-elm": "2.7.0",
+    "@parcel/transformer-inline-string": "2.7.0",
+    "@parcel/transformer-sass": "2.7.0",
     "buffer": "^5.5.0",
     "concurrently": "^7.3.0",
     "elm": "^0.19.1-5",
     "elm-spa": "^6.0.4",
-    "parcel": "^2.7.0",
+    "parcel": "2.7.0",
     "prettier": "^2.6.2"
   }
 }
