--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "build": "yarn build-server && yarn build-client && yarn build-migrations",
     "heroku-cleanup": "yarn prune-server && yarn prune-client",
     "prune-client": "cd client && yarn install --production && cd ..",
-    "prune-server": "cd server && yarn install --production && cd ..",
-    "start": "node server/dist/index.js"
+    "prune-server": "cd server && yarn install --production && cd .."
   },
   "author": "Luiz Socrate <luiz@socrate.com.br>",
   "license": "MIT",
