--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "build": "tsc",
     "db-apply-migrations": "pg-migrations apply --directory migrations",
     "migrations:create": "touch migrations/$(date +%s)-migration-name.sql",
-    "watch": "sh bin/watch.sh"
+    "watch": "sh bin/watch.sh",
+    "start": "node ./dist/index.js"
   },
   "author": "Luiz Socrate <luiz@socrate.com.br>",
   "license": "MIT",
