--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@rivalsdb/client",
+  "version": "1.0.0",
   "scripts": {
     "build-parcel": "parcel build src/index.html",
     "build-spa": "elm-spa gen",
@@ -18,7 +19,7 @@
   "license": "MIT",
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.22.2",
-    "@rivalsdb/id": "../shared/id",
+    "@rivalsdb/id": "1.0.0",
     "plausible-tracker": "^0.3.8"
   },
   "browserslist": "> 0.5%, last 2 versions, not dead",
