--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "engines": {
     "node": "18.x",
-    "yarn": "1.22.19"
+    "yarn": "1.22.x"
   },
   "private": true,
   "workspaces": [
